fix(homepage): adicionar gap vertical no `flexRow`

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -45,7 +45,7 @@
 .flexRow {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 15px;
+  gap: 0.5em 1em;
 }
 
 .sectSobre {
